--- a/deepseek_html_20250925_5ca960.html
+++ b/deepseek_html_20250925_5ca960.html
@@ -318,7 +318,7 @@
             
             <div class="tool-grid">
                 <!-- PDF Conversion Tools -->
-                <a href="PDF-Merge.html" class="tool-card bg-white border border-gray-200 p-6 block">
+                <a href="/PDFEDITOR/blob/main/PDF-Merge.html" class="tool-card bg-white border border-gray-200 p-6 block">
                     <div class="flex items-center mb-4">
                         <div class="w-12 h-12 bg-red-100 rounded-lg flex items-center justify-center mr-4">
                             <i class="fas fa-object-group text-red-600 text-xl tool-icon"></i>
